<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_example</name>
  <version>0.0.0</version>
  <description>The diff_drive_example package</description>

  <maintainer email="chuong19111996@gmail.com">chuong</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
