<?xml version="1.0"?>
<package format="2">
  <name>load_map</name>
  <version>0.0.0</version>
  <description>The load_map package</description>

  <maintainer email="chuong19111996@gmail.com.todo">chuong</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
    

  </export>
</package>
